refactor: isla 리뷰 사항 반형